samples/_failures_safe/1761614686_277a7c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7408d279.c: In function ‘main’:
./samples/SAFE/__tmp_7408d279.c:144:5: error: expected declaration or statement at end of input
  144 |     }
      |     ^
